fifth attempt to fix mobile keyboard pushing content out of viewport

--- a/main/style.css
+++ b/main/style.css
@@ -53,7 +53,7 @@ body {
 }
 
 body {
-  height: 100%;
+  height: 100vh;
   display: -ms-grid;
   display: grid;
   -ms-flex-line-pack: center;
